adjusted i3color and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Android Open Source Project
+FreeTube
 Google
 Proton Mail
 Raspberry Pi
@@ -35,6 +36,7 @@ mozilla
 nautilus
 net.imput.helium
 nextjs-nodejs
+obsidian
 opencode
 org.keshavnrj.ubuntu
 pulse
